Broken CSS fixed

--- a/my-react-website/src/scss/_footer.scss
+++ b/my-react-website/src/scss/_footer.scss
@@ -1,17 +1,16 @@
 footer{
-  width: 100%;
-  height: 25px;
-  background-color: transparent;
-  text-align: center;
-  position: relative;
-  left: 0 ;
-  bottom: 0 ;
   height: 60px;
   width: 100%;
+  background-color: transparent;
+  text-align: center;
+  position:absolute;
+  left:0;
+  bottom:0;
+  right:0;
   z-index: 2;
 }
-.phantom{
- display: block;
- height: 30px;
- width: 100%;
-}
+// .phantom{
+//  display: block;
+//  height: 30px;
+//  width: 100%;
+// }
