--- a/my-react-website/src/scss/_gobalstyle.scss
+++ b/my-react-website/src/scss/_gobalstyle.scss
@@ -3,6 +3,7 @@ html{
 }
 
 body {
+  height: 100%;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
 }
@@ -28,10 +29,7 @@ p{
 
 // Page transition styles
 .page{
-  position: absolute;
-  top: 100px;
-  left: 50px;
-  right: 50px;
+  height: 100%;
 }
 
 .fade-appear,
@@ -53,7 +51,7 @@ p{
     opacity: 0;
     transition: opacity 150ms linear;
 }
-// END 
+// END
 
 #page-body {
   max-width: 950px;
